[minor] fix z-index close project button

--- a/src/sass/pages/_project.scss
+++ b/src/sass/pages/_project.scss
@@ -1,7 +1,7 @@
 .showcase {
 	@include e(close) {
 		position: fixed;
-		z-index: 1;
+		z-index: 9999999;
 		top: 0;
 		right: 0;
 
